--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -7,7 +7,25 @@
     <script type="text/javascript" src="app.js"></script>
     <title></title>
   </head>
-  <body>
-    <h1>hullo werld</h1>
+  <body ng-controller="mainController as ctrl">
+
+    <!-- {{ ctrl.user.username }} -->
+
+    <form ng-submit="ctrl.login(userPass)">
+    <input type="text" ng-model="userPass.username" placeholder="username"/>
+    <input type="password" ng-model="userPass.password" placeholder="password"/>
+    <input type="submit"/>
+  </form>
+
+  <h4 ng-click="ctrl.getUsers()">Click to see behind scenes info</h4>
+
+  <a href="#" ng-click="ctrl.logout()">Log Out</a>
+
+  <div> {{ ctrl.error }} </div>
+
+  <div ng-repear="user in ctrl.users">
+    {{ user.username }}
+  </div>
+
   </body>
 </html>
