--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -10,20 +10,34 @@
   <body ng-controller="mainController as ctrl">
 
     <form ng-submit="ctrl.login(userPass)">
-    <input type="text" ng-model="userPass.username" placeholder="username"/>
-    <input type="password" ng-model="userPass.password" placeholder="password"/>
-    <input type="submit"/>
-  </form>
-  <a href="#" ng-click="ctrl.logout()">Log Out</a>
-  <h4 ng-click="ctrl.getUsers()">Get Users Test</h4>
-  <div> {{ ctrl.error }} </div>
-  <a href="#" ng-click="ctrl.showGames(user.id)">Show Games Test</a>
-  <a href="#" ng-click="ctrl.createGames(user.id)">Create Games Test</a>
-  <form ng-submit="ctrl.createGames(user.id)">
-  <input type="text" ng-model="userPass.username" placeholder="username"/>
-  <input type="password" ng-model="userPass.password" placeholder="password"/>
-  <input type="submit"/>
-</form>
+      <input type="text" ng-model="userPass.username" placeholder="username"/>
+      <input type="password" ng-model="userPass.password" placeholder="password"/>
+      <input type="submit"/>
+    </form>
+
+    <ul>
+    <li>
+      <a href="#" ng-click="ctrl.logout()">Log Out</a>
+    </li>
+    <li>
+      <a href='#' ng-click="ctrl.getUsers()">Get Users Test</a>
+    </li>
+    <li>
+      <a href="#" ng-click="ctrl.showGames(user.id)">Show Games Test</a>
+    </li>
+    <li>
+      <a href="#" ng-click="ctrl.createGames(user.id)">Create Games Test</a>
+    </li>
+  </ul>
+    <form ng-submit="ctrl.createGames(user.id)">
+      <input type="text" ng-model="createGames.username" placeholder="username"/>
+      <input type="text" ng-model="userPass.password" placeholder="password"/>
+      <input type="submit"/>
+    </form>
+
+    <!-- <h4 ng-click="ctrl.getUsers()">Get Users Test</h4>
+      <div> {{ ctrl.error }} </div> -->
+
 
 
 
