--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -40,14 +40,10 @@
       <input type="submit"/>
     </form>
 
-    <!-- <h4 ng-click="ctrl.getUsers()">Get Users Test</h4>
-      <div> {{ ctrl.error }} </div> -->
 
-
-  <!-- <div ng-repeat="games in ctrl.games()">
-    {{ games.name }}
-  </div> -->
-
+  <div ng-repeat="game in ctrl.games">
+    {{ game.name }}
+  </div>
 
   <div ng-repeat="user in ctrl.users">
     {{ user.username }}
@@ -55,3 +51,6 @@
 
   </body>
 </html>
+
+<!-- <h4 ng-click="ctrl.getUsers()">Get Users Test</h4>
+  <div> {{ ctrl.error }} </div> -->
