--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -43,6 +43,7 @@
       <img src= "{{ game.image }}"></img>
       <button ng-click="ctrl.showGame(game.id)">Show Game Info Test</button>
       <button ng-click="ctrl.deleteGamesFromDB(game.id)">Delete Game Test</button>
+      <button ng-click="ctrl.editGame(game.id)">Edit Game Test</button>
   </div>
 
   <div ng-repeat="user in ctrl.users">
