--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -50,6 +50,13 @@
     {{ user.username }}
   </div>
 
+  <div class="game-container-whole">
+    <div class="game-container" ng-if='ctrl.game'>
+      {{ ctrl.game.name }}
+    </div>
+
+  </div>
+
   </body>
 </html>
 
