--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -12,9 +12,15 @@
 
     <header>
       <form ng-submit="ctrl.signup(userPass)">
-        <input type="text" ng-model="userPass.username" placeholder="username"/>
-        <input type="password" ng-model="userPass.password" placeholder="password"/>
-        <input type="submit"/>
+        <div>
+          <label for="username">username</label>
+          <input type="text" ng-model="userPass.username">
+        </div>
+        <div>
+          <label for="password">password</label>
+          <input type="password" ng-model="userPass.password">
+        </div>
+          <button type="submit">Sign Up!</button>
       </form>
 
       <form ng-submit="ctrl.login(userPass)">
