--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -4,33 +4,30 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script type="text/javascript" src="js/router.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <title></title>
   </head>
 
   <body ng-controller="mainController as ctrl">
 
-    <header>
-      <form ng-submit="ctrl.signup(userPass)">
-        <div>
-          <label for="username">username</label>
-          <input type="text" ng-model="userPass.username">
-        </div>
-        <div>
-          <label for="password">password</label>
-          <input type="password" ng-model="userPass.password">
-        </div>
-          <button type="submit">Sign Up!</button>
-      </form>
+    <nav>
+    <!-- <header> -->
+      <button ui-sref="login">login </button>
+      <button ui-sref="signup">signup</button>
+      <button ng-if="ctrl.user" ng-click="ctrl.logout()">logout</button>
+      <p ng-if="ctrl.user">Welcome {{ ctrl.user.username }}!</p>
 
-      <form ng-submit="ctrl.login(userPass)">
+      <!-- <form ng-submit="ctrl.login(userPass)">
         <input type="text" ng-model="userPass.username" placeholder="username"/>
         <input type="password" ng-model="userPass.password" placeholder="password"/>
-        <input type="submit"/>
-      </form>
+        <button type="submit">Login!</button>
+      </form> -->
 
-      <a href="#" ng-click="ctrl.logout()">Log Out</a>
-    </header>
+      <!-- <a href="#" ng-click="ctrl.logout()">Log Out</a> -->
+    <!-- </header> -->
+  </nav>
 
     <div class="container">
       <main>
@@ -69,7 +66,7 @@
 
         <div class="game-container" ng-if='ctrl.game'>
           <ul>
-            <h3>{{ ctrl.game.name }}</h3>
+            <h3> {{ ctrl.game.name }} </h3>
             <li>Platforms: {{ ctrl.game.platforms }} </li>
             <li>Genre: {{ ctrl.game.genre }} </li>
             <li>Description: {{ ctrl.game.description }} </li>
