--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -10,73 +10,97 @@
 
   <body ng-controller="mainController as ctrl">
 
-    <header>
-      <form ng-submit="ctrl.signup(userPass)">
-        <input type="text" ng-model="userPass.username" placeholder="username"/>
-        <input type="password" ng-model="userPass.password" placeholder="password"/>
-        <input type="submit"/>
-      </form>
-
+    <nav>
       <form ng-submit="ctrl.login(userPass)">
         <input type="text" ng-model="userPass.username" placeholder="username"/>
         <input type="password" ng-model="userPass.password" placeholder="password"/>
         <input type="submit"/>
       </form>
-
       <a href="#" ng-click="ctrl.logout()">Log Out</a>
-    </header>
+    </nav>
 
     <div class="container">
       <main>
         <h3>Add a Game</h3>
-        <form ng-submit="ctrl.createGames()">
-          <input type="text" ng-model="ctrl.formdata.name" placeholder="name"/>
-          <input type="text" ng-model="ctrl.formdata.platforms" placeholder="platforms"/>
-          <input type="text" ng-model="ctrl.formdata.image" placeholder="image"/>
-          <input type="text" ng-model="ctrl.formdata.description" placeholder="description"/>
-          <input type="text" ng-model="ctrl.formdata.genre" placeholder="genre"/>
-          <input type="text" ng-model="ctrl.formdata.rating" placeholder="rating"/>
-          <input type="text" ng-model="ctrl.formdata.developers" placeholder="developers"/>
-          <input type="text" ng-model="ctrl.formdata.publisher" placeholder="publisher"/><input type="text" ng-model="ctrl.formdata.review" placeholder="review"/>
-          <input type="text" ng-model="ctrl.formdata.videos" placeholder="videos"/>
-          <input type="text" ng-model="ctrl.formdata.release_date" placeholder="release_date"/>
-          <input type="submit"/>
-        </form>
-
+        <div class="form">
+          <form ng-submit="ctrl.createGames()">
+            <input type="text" ng-model="ctrl.formdata.name" placeholder="name"/>
+            <input type="text" ng-model="ctrl.formdata.platforms" placeholder="platforms"/>
+            <input type="text" ng-model="ctrl.formdata.image" placeholder="image"/>
+            <input type="text" ng-model="ctrl.formdata.description" placeholder="description"/>
+            <input type="text" ng-model="ctrl.formdata.genre" placeholder="genre"/>
+            <input type="text" ng-model="ctrl.formdata.rating" placeholder="rating"/>
+            <input type="text" ng-model="ctrl.formdata.developers" placeholder="developers"/>
+            <input type="text" ng-model="ctrl.formdata.publisher" placeholder="publisher"/><input type="text" ng-model="ctrl.formdata.review" placeholder="review"/>
+            <input type="text" ng-model="ctrl.formdata.videos" placeholder="videos"/>
+            <input type="text" ng-model="ctrl.formdata.release_date" placeholder="release_date"/>
+            <input type="submit"/>
+          </form>
+        </div>
 
         <div>
-          <a href="#"  ng-click="ctrl.showGames(user.id)">Show Games Test</a>
+          <button ng-click="ctrl.showGames(user.id)">My Games</button>
           <div ng-repeat="game in ctrl.games">
             <h3>{{ game.name }}</h3>
             <img src= "{{ game.image }}"></img>
-            <button ng-click="ctrl.showGame(game.id)">Show Game Info Test</button>
-            <button ng-click="ctrl.deleteGamesFromDB(game.id)">Delete Game Test</button>
-            <button ng-click="ctrl.editGame(game.id)">Edit Game Test</button>
+            <button ng-click="ctrl.showGame(game.id)">Game Info</button>
+            <button ng-click="ctrl.deleteGamesFromDB(game.id)">Delete Game From Library</button>
+            <!-- <button ng-click="ctrl.editGame(game.id)">Edit Game Info</button> -->
+            <div class="form" ng-if='ctrl.game'>
+              <h3>EDIT GAME INFO</h3>
+              <form ng-submit="ctrl.editGame(game.id)">
+                <input type="text" ng-model="ctrl.editformdata.name" placeholder="name"/>
+                <input type="text" ng-model="ctrl.editformdata.platforms" placeholder="platforms"/>
+                <input type="text" ng-model="ctrl.editformdata.image" placeholder="image"/>
+                <input type="text" ng-model="ctrl.editformdata.description" placeholder="description"/>
+                <input type="text" ng-model="ctrl.editformdata.genre" placeholder="genre"/>
+                <input type="text" ng-model="ctrl.editformdata.rating" placeholder="rating"/>
+                <input type="text" ng-model="ctrl.editformdata.developers" placeholder="developers"/>
+                <input type="text" ng-model="ctrl.editformdata.publisher" placeholder="publisher"/><input type="text" ng-model="ctrl.editformdata.review" placeholder="review"/>
+                <input type="text" ng-model="ctrl.editformdata.videos" placeholder="videos"/>
+                <input type="text" ng-model="ctrl.editformdata.release_date" placeholder="release_date"/>
+                <input type="submit"/>
+              </form>
+            </div>
           </div>
 
-          <div ng-repeat="user in ctrl.users">
-            {{ user.username }}
-          </div>
+
+
       </main>
 
-      <aside>
-
         <div class="game-container" ng-if='ctrl.game'>
-          <ul>
-            <h3>{{ ctrl.game.name }}</h3>
-            <li>Platforms: {{ ctrl.game.platforms }} </li>
-            <li>Genre: {{ ctrl.game.genre }} </li>
-            <li>Description: {{ ctrl.game.description }} </li>
-            <li>Rating: {{ ctrl.game.rating }} </li>
-            <li>Developers: {{ ctrl.game.developers }} </li>
-            <li>Publisher: {{ ctrl.game.publisher }} </li>
-            <li>Release Date: {{ ctrl.game.release_date }} </li>
-          </ul>
-        </div>
-      </div>
-    </aside>
-  </div>
+          <h3>{{ ctrl.game.name }}</h3>
+          <p ng-if="ctrl.game">Platforms: {{ ctrl.game.platforms }}</p>
+          <p ng-if="ctrl.game">Genre: {{ ctrl.game.genre }}</p>
+          <p ng-if="ctrl.game">Description: {{ ctrl.game.description }}</p>
+          <p ng-if="ctrl.game">Rating: {{ ctrl.game.rating }}</p>
+          <p ng-if="ctrl.game">Developers: {{ ctrl.game.developers }}</p>
+          <p ng-if="ctrl.game">Publisher: {{ ctrl.game.publisher }}</p>
+          <p ng-if="ctrl.game">Release Date: {{ ctrl.game.release_date }}</p>
 
+          <!-- <div class="form" ng-if='ctrl.game'>
+            <h3>EDIT GAME INFO</h3>
+            <form ng-submit="ctrl.editGame(game.id)">
+              <input type="text" ng-model="ctrl.editformdata.name" placeholder="name"/>
+              <input type="text" ng-model="ctrl.editformdata.platforms" placeholder="platforms"/>
+              <input type="text" ng-model="ctrl.editformdata.image" placeholder="image"/>
+              <input type="text" ng-model="ctrl.editformdata.description" placeholder="description"/>
+              <input type="text" ng-model="ctrl.editformdata.genre" placeholder="genre"/>
+              <input type="text" ng-model="ctrl.editformdata.rating" placeholder="rating"/>
+              <input type="text" ng-model="ctrl.editformdata.developers" placeholder="developers"/>
+              <input type="text" ng-model="ctrl.editformdata.publisher" placeholder="publisher"/><input type="text" ng-model="ctrl.editformdata.review" placeholder="review"/>
+              <input type="text" ng-model="ctrl.editformdata.videos" placeholder="videos"/>
+              <input type="text" ng-model="ctrl.editformdata.release_date" placeholder="release_date"/>
+              <input type="submit"/>
+            </form>
+          </div> -->
+
+        </div>
+
+
+      </div>
+
+    </div>
   </body>
 
   <footer>
@@ -89,6 +113,18 @@
 
 
 <!-- -graveyard ---------------------------------------->
+
+<!-- <header> -->
+  <!-- <form ng-submit="ctrl.signup(userPass)">
+    <input type="text" ng-model="userPass.username" placeholder="username"/>
+    <input type="password" ng-model="userPass.password" placeholder="password"/>
+    <input type="submit"/>
+  </form> -->
+<!-- </header> -->
+
+<!-- <div ng-repeat="user in ctrl.users">
+  {{ user.username }}
+</div> -->
 
 <!-- <li>
   <a href='#' ng-click="ctrl.getUsers()">Get Users Test</a>
