--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -15,9 +15,16 @@
       <form ng-submit="ctrl.login(userPass)">
         <input type="text" ng-model="userPass.username" placeholder="username"/>
         <input type="password" ng-model="userPass.password" placeholder="password"/>
-        <input type="submit"/>
+        <button type="submit">Login</button>
       </form>
-      <a href="#" ng-click="ctrl.logout()">Log Out</a>
+      <div>
+      <form ng-submit="ctrl.signup(userPass)">
+        <input type="text" ng-model="userPass.username" placeholder="username"/>
+        <input type="password" ng-model="userPass.password" placeholder="password"/>
+        <button type="submit">Sign Up</button>
+      </form>
+    </div>
+      <button type="submit" ng-click="ctrl.logout()">Log Out</button>
     </nav>
 
     <div class="container">
