--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -5,14 +5,20 @@
     <link rel="stylesheet" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+     <script type="text/javascript" src="js/router.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <title></title>
   </head>
 
   <body ng-controller="mainController as ctrl">
 
     <nav>
-      <form ng-submit="ctrl.login(userPass)">
+      <button ui-sref="login">login </button>
+      <button ui-sref="signup">signup</button>
+      <button ng-if="ctrl.user" ng-click="ctrl.logout()">logout</button>
+      <p ng-if="ctrl.user">Hello {{ ctrl.user.username }}</p>
+      <!-- <form ng-submit="ctrl.login(userPass)">
         <input type="text" ng-model="userPass.username" placeholder="username"/>
         <input type="password" ng-model="userPass.password" placeholder="password"/>
         <button type="submit">Login</button>
@@ -24,7 +30,7 @@
         <button type="submit">Sign Up</button>
       </form>
     </div>
-      <button type="submit" ng-click="ctrl.logout()">Log Out</button>
+      <button type="submit" ng-click="ctrl.logout()">Log Out</button> -->
     </nav>
 
     <div class="container">
